--- a/src/templates/todolist-panel.html
+++ b/src/templates/todolist-panel.html
@@ -24,12 +24,12 @@
 
       {# Toggle scope User/Team switch #}
       <div class='d-inline-flex rounded border-white p-1'>
-        <div class='mr-1'>{{ 'User'|trans }}</div>
-        <label class='switch'>
+        <label class='mb-0' for='todolistStepsShowTeam'>{{ 'User'|trans }}</label>
+        <label class='switch mx-1 mb-0'>
           <input type='checkbox' id='todolistStepsShowTeam' autocomplete='off' aria-label='{{ 'Show steps for team'|trans }}'>
           <span class='slider'></span>
         </label>
-        <div class='ml-1'>{{ 'Team'|trans }}</div>
+        <label class='mb-0' for='todolistStepsShowTeam'>{{ 'Team'|trans }}</label>
       </div>
     </div>
 
