--- a/src/templates/binary-setting.html
+++ b/src/templates/binary-setting.html
@@ -6,10 +6,10 @@
 {% set slugId = slug ~ (affix ? '-' ~ affix) %}
 <div class='d-flex justify-content-between'>
   <label for='{{ slugId }}' class='col-form-label'>{{ label }}</label>
-  <span class='switch ucp-align'>
+  <label class='switch ucp-align'>
     <input type='checkbox' autocomplete='off' data-trigger='change' data-model='{{ model|default('config') }}' data-target='{{ slug }}' {{ src[slug] ? 'checked="checked"' }} id='{{ slugId }}'>
     <span class='slider'></span>
-  </span>
+  </label>
 </div>
 {% if help %}
   <p class='smallgray'>{{ help }}</p>
