--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -105,7 +105,7 @@
             {# Blank value on duplicate switch #}
             <div>
               <div class='d-inline-flex flex-row'>
-                <div class='d-inline mr-1' for='blankValueOnDuplicateSwitch'><p>{{ 'Blank value on duplicate'|trans }}</p></div>
+                <label class='d-inline mr-1' for='blankValueOnDuplicateSwitch'>{{ 'Blank value on duplicate'|trans }}</label>
                 <label class='switch'>
                   <input type='checkbox' autocomplete='off' id='blankValueOnDuplicateSwitch'>
                   <span class='slider'></span>
@@ -115,7 +115,7 @@
             {# required switch #}
             <div>
               <div class='d-inline-flex flex-row'>
-                <div class='d-inline mr-1' for='requiredSwitch'><p>{{ 'Required'|trans }}</p></div>
+                <label class='d-inline mr-1' for='requiredSwitch'>{{ 'Required'|trans }}</label>
                 <label class='switch'>
                   <input type='checkbox' autocomplete='off' id='requiredSwitch'>
                   <span class='slider'></span>
@@ -125,7 +125,7 @@
             {# readonly switch #}
             <div>
               <div class='d-inline-flex flex-row'>
-                <div class='d-inline mr-1' for='readonlySwitch'><p>{{ 'Read-only'|trans }}</p></div>
+                <label class='d-inline mr-1' for='readonlySwitch'>{{ 'Read-only'|trans }}</label>
                 <label class='switch'>
                   <input type='checkbox' autocomplete='off' id='readonlySwitch'>
                   <span class='slider'></span>
