--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -38,19 +38,19 @@
 <div id='versionNotifZone'></div>
 
 <ul class='tabbed-menu'>
-  <li data-action='switch-tab' data-tabtarget='1'>{{ 'Server'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='2'>{{ 'Teams'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='3'>{{ 'Users'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='4'>{{ 'Communication'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='5'>{{ 'Email'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='6'>{{ 'Security'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='7'>{{ 'Policies'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='8'>{{ 'Uploads'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='9'>{{ 'Timestamp'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='10'>SAML</li>
-  <li data-action='switch-tab' data-tabtarget='11'>LDAP</li>
-  <li data-action='switch-tab' data-tabtarget='12'>{{ 'External auth'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='13'>{{ 'Audit Logs'|trans }}</li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='1'>{{ 'Server'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='2'>{{ 'Teams'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='3'>{{ 'Users'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='4'>{{ 'Communication'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='5'>{{ 'Email'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='6'>{{ 'Security'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='7'>{{ 'Policies'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='8'>{{ 'Uploads'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='9'>{{ 'Timestamp'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='10'>SAML</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='11'>LDAP</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='12'>{{ 'External auth'|trans }}</button></li>
+  <li><button type='button' class='btn' data-action='switch-tab' data-tabtarget='13'>{{ 'Audit Logs'|trans }}</button></li>
 </ul>
 
 {# loading spinner #}
