--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -283,16 +283,25 @@ h5 {
     padding: 0;
 
     li {
-        color: $medium;
-        cursor: pointer;
         display: inline;
+        margin: 0;
         margin-right: 2%;
-        text-transform: uppercase;
-    }
 
-    .selected {
-        border-bottom: 6px solid $elabblue;
-        padding-bottom: 0;
+        button {
+            border: 0;
+            border-radius: 0;
+            color: $medium;
+            font-weight: 500;
+            margin: 0;
+            margin-bottom: 6px;
+            padding: 0;
+            text-transform: uppercase;
+        }
+
+        .selected {
+            border-bottom: 6px solid $elabblue;
+            margin-bottom: 0;
+        }
     }
 }
 
