nicer toggle scope User/Team switch in to-do list

--- a/src/templates/todolist-panel.html
+++ b/src/templates/todolist-panel.html
@@ -23,7 +23,7 @@
       </div>
 
       {# Toggle scope User/Team switch #}
-      <div class='d-inline-flex rounded border-white p-1'>
+      <div class='d-inline-flex rounded border-white p-1 align-items-center'>
         <label class='mb-0' for='todolistStepsShowTeam'>{{ 'User'|trans }}</label>
         <label class='switch mx-1 mb-0'>
           <input type='checkbox' id='todolistStepsShowTeam' autocomplete='off' aria-label='{{ 'Show steps for team'|trans }}'>
