aria-label for modal close buttons get international

--- a/src/templates/booking-params-modal.html
+++ b/src/templates/booking-params-modal.html
@@ -4,7 +4,7 @@
     <div class='modal-content'>
       <div class='modal-header'>
         <h5 class='modal-title' id='bookingParamsModalLabel'><i class='fas fa-fw fa-calendar-plus'></i> {{ 'Modify booking parameters'|trans }}</h5>
-        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+        <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
