--- a/src/templates/archive-user-modal.html
+++ b/src/templates/archive-user-modal.html
@@ -12,7 +12,7 @@
     <div class='modal-content'>
       <div class='modal-header'>
         <h5 class='modal-title' id='archiveUserModalLabel_{{ user.userid }}'><i class='fas fa-fw fa-box-archive'></i> {{ action }}</h5>
-        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+        <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
