--- a/src/templates/create-new-item-modal.html
+++ b/src/templates/create-new-item-modal.html
@@ -5,7 +5,7 @@
     <div class='modal-content'>
       <div class='modal-header'>
         <h5 class='modal-title' id='createModalLabel_{{ entityType }}'>{{ 'Select template'|trans }}</h5>
-        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+        <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
