--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -5,7 +5,7 @@
       <form id ='newFieldForm' class='new-field-form'>
         <div class='modal-header'>
           <h5 class='modal-title' id='fieldBuilderLabel'><i class='fas fa-fw fa-trowel'></i> {{ 'Add an extra field'|trans }}</h5>
-          <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+          <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
             <span aria-hidden='true'>&times;</span>
           </button>
         </div>
@@ -149,7 +149,7 @@
       <form class='new-field-form'>
         <div class='modal-header'>
           <h4 class='modal-title' id='fieldLoaderLabel'><i class='fas fa-fw fa-truck-ramp-box'></i> {{ 'Load extra fields'|trans }}</h4>
-          <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+          <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
             <span aria-hidden='true'>&times;</span>
           </button>
         </div>
