translate more aria-labels, remove unnecessary aria-labels

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -525,7 +525,7 @@
 
     <button type='button' class='btn btn-primary' data-action='deduplicate-tag'><i class='fas fa-clone mr-1 text-white'></i>{{ 'Deduplicate'|trans }}</button>
     <div class='mt-2' id='tagMgrDiv'>
-      <table class='table' aria-label='Tags of the team' data-table-sort='true'>
+      <table class='table' aria-label='{{ 'Tags of the team'|trans }}' data-table-sort='true'>
         <thead>
           <tr>
             <th scope='col'>{{ 'Tag'|trans }}</th>
