--- a/src/templates/create-new.html
+++ b/src/templates/create-new.html
@@ -7,7 +7,7 @@
       <button type='button' class='btn btn-primary dropdown-toggle dropdown-toggle-split' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'>
         <span class='sr-only'>{{ 'Toggle create new menu'|trans }}</span>
       </button>
-      <div class='dropdown-menu' aria-label='{{ 'Create new'|trans }}'>
+      <div class='dropdown-menu'>
         {% if entityPage == 'experiments.php' %}
           {% if templatesArr|length > 0 %}
             <h6 class='dropdown-header'>{{ 'Experiments templates'|trans }}</h6>
