--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -10,7 +10,7 @@
   {# left part, full height: checkbox #}
   <div class='d-flex align-items-center'>
     {# checkbox #}
-    <input autocomplete='off' type='checkbox' data-action='checkbox-entity' data-id='{{ item.id }}' data-randomid='{{ randomId }}' data-type='{{ Entity.type }}' aria-label='Select' class='mr-3' />
+    <input autocomplete='off' type='checkbox' data-action='checkbox-entity' data-id='{{ item.id }}' data-randomid='{{ randomId }}' data-type='{{ Entity.type }}' aria-label='{{ 'Select'|trans }}' class='mr-3' />
     <div class='d-flex'>
 
       {# lock icon #}
