--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -11,7 +11,7 @@
     <div class='modal-content'>
       <div class='modal-header'>
         <h5 class='modal-title' id='policyModalLabel'>{{ 'Privacy policy'|trans }}</h5>
-        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+        <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
