--- a/src/templates/show-view-edit.html
+++ b/src/templates/show-view-edit.html
@@ -6,7 +6,7 @@
     <div class='modal-content'>
       <div class='modal-header'>
         <h5 class='modal-title' id='importModalLabel'>{{ 'Import from file'|trans }}</h5>
-        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+        <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
