--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -155,7 +155,7 @@
     </div>
 
     {# EXTRA FIELDS #}
-    <h3 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Extra fields'|trans }}</h3>
+    <h3 data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Extra fields'|trans }}</h3>
     <div data-save-hidden='metadataDiv' class='col-md-6 mt-4'>
       {# this div is filled in JS by Metadata.class.ts edit() #}
       <div id='metadataDiv'></div>
