--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -1,7 +1,7 @@
 <div class='row mt-4'>
   {# STEPS #}
   <section class='col-md-12'>
-    <h4 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i> {{ 'Steps'|trans }}</h4>
+    <h4 data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='stepsDiv'><i class='fas fa-caret-down mr-2 fa-fw'></i> {{ 'Steps'|trans }}</h4>
     {# ADD STEP #}
     <div id='stepsDiv' class='mt-2' data-save-hidden='stepsDiv'>
       <div class='sortable' id='steps_div_{{ Entity.id }}' data-axis='y' data-table='{{ Entity.type ? Entity.type : 'items_types' }}_steps'>
@@ -96,14 +96,13 @@
   {% if Entity.type == 'items' or Entity.type == 'experiments' %}
     {# EXPERIMENTS LINKS #}
     <section class='col-md-12'>
-      <h4 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i>{% trans %}
+      <h4 data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='linksExpDiv'><i class='fas fa-caret-down mr-2 fa-fw'></i>{% trans %}
       Linked experiment
       {% plural 2 %}
       Linked experiments
       {% endtrans %}</h4>
-      <div class='mt-2' data-save-hidden='linksExpDiv'>
         {# display experiments links #}
-        <div id='linksExpDiv'>
+      <div class='mt-2' data-save-hidden='linksExpDiv' id='linksExpDiv'>
             {% if Entity.entityData.experiments_links %}
             <ul class='list-group'>
                 {% for link in Entity.entityData.experiments_links %}
@@ -154,17 +153,16 @@
             <button class='btn btn-primary' type='button'>{{ 'Add'|trans }}</button>
           </div>
         </div>
-      </div>
       <hr>
     </section>
+
   {% endif %}
 
   {# ITEMS LINKS #}
   <section class='col-md-12'>
-    <h4 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i> {{ 'Linked resources'|trans }}</h4>
-    <div class='mt-2' data-save-hidden='linksDiv'>
+    <h4 data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='linksDiv'><i class='fas fa-caret-down mr-2 fa-fw'></i> {{ 'Linked resources'|trans }}</h4>
       {# DISPLAY ITEMS LINKS #}
-      <div id='linksDiv'>
+    <div class='mt-2' data-save-hidden='linksDiv' id='linksDiv'>
           {% if Entity.entityData.items_links %}
           <ul class='list-group'>
               {% for link in Entity.entityData.items_links %}
@@ -215,7 +213,6 @@
           <button class='btn btn-primary' type='button'>{{ 'Add'|trans }}</button>
         </div>
       </div>
-    </div>
   </section>
 </div>
 <hr>
