--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -279,7 +279,7 @@
         {% endfor %}
         </div>
       {% elseif App.Users.userData.display_mode == 'tb' -%}
-        <table id='itemList' class='table item-table' aria-describedby='pageTitle'>
+        <table id='itemList' class='table item-table mt-2' aria-describedby='pageTitle'>
           <thead>
             <tr>
               <th>
