--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -164,9 +164,9 @@
   <table id='teamtable' class='table' aria-describedby='pageTitle' data-table-sort='true'>
     <thead>
       <tr>
-          <th>{{ 'Name'|trans }}</th>
-          <th>{{ 'Email'|trans }}</th>
-          <th>ORCID</th>
+          <th scope='col'>{{ 'Name'|trans }}</th>
+          <th scope='col'>{{ 'Email'|trans }}</th>
+          <th scope='col'>ORCID</th>
       </tr>
     </thead>
     <tbody>
