--- a/src/templates/json-editor.html
+++ b/src/templates/json-editor.html
@@ -16,7 +16,7 @@
         </div>
       </div>
 
-      <div class='vertical-separator mx-3'></div>
+      <div class='vertical-separator'></div>
 
       {# IMPORT FROM FILE #}
       <div class='mr-2'>
@@ -32,7 +32,7 @@
         </div>
       </div>
 
-      <div class='vertical-separator mx-3'></div>
+      <div class='vertical-separator'></div>
 
       {# SAVE AS ATTACHMENT #}
       <div class='mr-2'>
