--- a/src/templates/show-templates-select.html
+++ b/src/templates/show-templates-select.html
@@ -5,7 +5,7 @@
       <p class='col-form-label'>{{ 'This page lists all the experiments templates that you can edit.'|trans }}</p>
       <div>
         <button type='button' class='btn btn-secondary' data-action='show-import-tpl'>{{ 'Import from file'|trans }} (.eln)</button>
-        <div class='vertical-separator d-inline mx-3'></div>
+        <div class='vertical-separator d-inline'></div>
         <button type='button' class='btn btn-primary' data-action='create-template'>{{ 'Create'|trans }}</button>
         <input type='file' aria-hidden='true' hidden accept='.eln' id='import_tpl' class='form-control mt-2'>
       </div>
