--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -10,7 +10,7 @@
     </div>
   </a>
 
-  <div class='vertical-separator mx-3'></div>
+  <div class='vertical-separator'></div>
 
   {% if mode == 'edit' %}
     {# VIEW #}
@@ -81,7 +81,7 @@
           <i class='fas {{ lockIcon }} fa-fw'></i>
         </div>
 
-        <div class='vertical-separator mx-3'></div>
+    <div class='vertical-separator'></div>
 
         {# MORE OPTIONS #}
         <div class='dropdown'>
