--- a/src/templates/view-permissions.html
+++ b/src/templates/view-permissions.html
@@ -23,5 +23,5 @@
     <i class='fas fa-fw fa-square-plus fa-2x'></i>
   </div>
 {% endif %}
-<div class='vertical-separator mx-3'></div>
+<div class='vertical-separator'></div>
 {% include('view-permissions-details.html') %}
