--- a/src/templates/view-edit-toolbar.html
+++ b/src/templates/view-edit-toolbar.html
@@ -42,7 +42,7 @@
     </div>
   </a>
 
-  <div class='vertical-separator mx-3'></div>
+  <div class='vertical-separator'></div>
 
   {% if mode == 'edit' %}
     {# VIEW #}
@@ -89,7 +89,7 @@
       </div>
     </div>
     <input type='text' class='form-control' aria-label='{{ 'Share'|trans }}' id='shareLinkInput' value='' hidden />
-    <div class='vertical-separator mx-2'></div>
+    <div class='vertical-separator'></div>
   {% endif %}
 
 
@@ -112,7 +112,7 @@
   {% endif %}
 
   {% if not App.Session.has('is_anon') %}
-    <div class='vertical-separator mx-2'></div>
+    <div class='vertical-separator'></div>
   {% endif %}
 
   {# DOWNLOAD / EXPORT MENU #}
@@ -154,7 +154,7 @@
       </div>
     {% endif %}
 
-    <div class='vertical-separator mx-3'></div>
+    <div class='vertical-separator'></div>
     {# MORE OPTIONS #}
     <div class='dropdown'>
       <div data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button' title='{{ 'Toggle pin'|trans }}' class='hl-hover-gray p-2 px-3 rounded'>
